Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92372

QtQuick's qmltypes misses signals

    XMLWordPrintable

Details

    • 3c7949ac2d4f5ea2c608c84612d0cee1339180c5 (qt/qtdeclarative/dev)

    Description

      Probably because of

              if (notifySignals.contains(name) && arguments.isEmpty() && revision == obj.end())
                  continue;
      

      signals like QQuickItem::onWidthChanged are missing in the qmltypes file. This causes issues with e.g. qmllint.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            fabiankosmale Fabian Kosmale
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes